<resources>
    <string name="app_name">Movies DB</string>
    <string name="year_filter">Year Filter</string>
    <string name="min_year">Min. Year</string>
    <string name="max_year">Max. Year</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="choose_start_date">Please choose the start date</string>
    <string name="choose_end_date">Please choose the end date</string>
</resources>
